--- a/bum.html
+++ b/bum.html
@@ -1,28 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+
+</style>
 <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
 <link href="styles/style.css" rel="stylesheet" type="text/css">
 <meta charset = "utf-8">
-<title> Mozilla.com </title>
+
+<title> Ænglisc </title>
 
 </head>
 <body>
-<h1 p align="center"> Mozilla is cool </h1>
-<center><img src="images/firefox-icon.png" alt= "My test image" height="400" width"400"></center>
-<p> At Mozilla, we're a global community of </p>
 
-<ul>
- <li> Technologists </li>
- <li> Thinkers </li>
- <li> Builders </li>
-</ul>
+<div class="topnav" id="myTopnav">
+  <a href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+</div>
+
+<a href="index2.html"> Contact </a>
+<h1 p align="center"> Asunder Old English Online Dictionary </h1>
+<center>
+<form>
+<input type="text" name="search" placeholder="Search for old english words...">
+</form>
+</center>
+
+<img src="images/flag.png" width = "600" height= "1000">
+
  
-<p> Mozilla is a free-software community created in 1998 by members of Netscape. The Mozilla community uses, develops, spreads and supports Mozilla products, thereby promoting exclusively free software and open standards, with only minor exceptions.[1] The community is supported institutionally by the Mozilla Foundation and its tax-paying subsidiary, the Mozilla Corporation.</p>
+<p> Þæt Englisce gereord is Westgermaniscu sprǣc, þe fram Englalande aras. Heo is sibb þære Ealdfresiscan spræce and þære Ealdseaxiscan spræce. Heo is gastleas spræc, and heo ne hæfþ nan folc todæg, ac heo is gesprecen on þisse Wicipædie. </p>
+<center>
+<p> 2017 </p>
+</center>
 
-<p> Read the <a href = "https://medium.com/chris-messina/the-mozilla-manifesto-and-the-open-web-9dd141bb4f0a#.4z8ve4vb3"> Mozilla Manifesto </a> to learn even more about the values and principles that the pursuit of our mission. </p>
-<button>Change user</button>
 <script src="scripts/main.js"></script>
 
 </body>
 </html>
+
